# vehicle-registration-dashboard

./: README.md  app.py  data_generator.py  data_processor.py  data_scraper.py  pyproject.toml  requirements.txt  scrape_data.py
data/: vehicle_registrations.csv  vehicle_registrations_scraped.csv
