[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-registration-dashboard"
version = "1.0.0"
description = "A data visualization dashboard for vehicle registration data"
readme = "README.md"
requires-python = ">=3.8,<3.13"
dependencies = [
    "streamlit>=1.22.0,<2.0.0",
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "plotly>=5.14.0,<6.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
